--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --ci --reporters=default --reporters=jest-junit",
     "test:coverage": "jest --ci --coverage",
     "test:watch": "jest --watch",
-    "build": "webpack",
+    "build": "node esbuild.config.js",
     "prettyLint": "prettier --write . && eslint --fix .",
     "lintCheck": "conc \"prettier -c .\" \"eslint .\" \"tsc --noEmit\""
   },
@@ -29,6 +29,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "concurrently": "^7.6.0",
+    "esbuild": "0.17.18",
     "eslint": "^7.17.0",
     "eslint-plugin-spellcheck": "^0.0.19",
     "jest": "^29.5.0",
