--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,7 +70,8 @@
                     "color",
                     "colors",
                     "colored",
-                    "mmps"
+                    "mmps",
+                    "nulled"
                 ],
                 "skipWordIfMatch": ["^pointer.*$", "(\\S+(32|64)+)"],
                 "minLength": 3
