--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,7 +71,8 @@
                     "colors",
                     "colored",
                     "mmps",
-                    "nulled"
+                    "nulled",
+                    "castedKey"
                 ],
                 "skipWordIfMatch": ["^pointer.*$", "(\\S+(32|64)+)"],
                 "minLength": 3
