--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,7 +72,10 @@
                     "colored",
                     "mmps",
                     "nulled",
-                    "castedKey"
+                    "castedKey",
+                    "touchstart",
+                    "touchmove",
+                    "touchend"
                 ],
                 "skipWordIfMatch": ["^pointer.*$", "(\\S+(32|64)+)"],
                 "minLength": 3
