--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@microsoft/api-documenter": "^7.22.33",
+    "@microsoft/api-extractor": "^7.36.4",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.12",
