Update some comments

--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -395,6 +395,10 @@
         // "addToApiReportFile": false
       }
 
+      // "ae-unresolved-link": {
+      //   "logLevel": "none"
+      // }
+
       // "ae-extra-release-tag": {
       //   "logLevel": "warning",
       //   "addToApiReportFile": true
