--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -393,6 +393,11 @@
       "default": {
         "logLevel": "warning"
         // "addToApiReportFile": false
+      },
+
+      "ae-internal-missing-underscore": {
+        "logLevel": "none",
+        "addToApiReportFile": false
       }
 
       // "ae-unresolved-link": {
