--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,8 @@ TF_Tooling::Docs::build:
     # Run unit tests
     - cd ${CI_PROJECT_DIR}
     - npm i
-    - npm run build:docs | tee docs_output.txt
-    - if ((cat docs_output.txt | Select-String "You have changed the public API signature for this project.").Count -gt 0) { exit 1 }
+    - npm run build:docs | Tee-Object -FilePath "${CI_PROJECT_DIR}/docs_output.txt"
+    - if ((cat ${CI_PROJECT_DIR}/docs_output.txt | Select-String "You have changed the public API signature for this project.").Count -gt 0) { exit 1 }
   artifacts:
     name: 'TouchFree_Tooling_Documentation'
     paths:
