--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,12 +62,9 @@ TF_Tooling::Docs::build:
     - docker-windows
   image: registry.ultrahaptics.com/ooh/infrastructure/windows-touchfree-toolchain:latest
   script:
-    # Run unit tests
     - cd ${CI_PROJECT_DIR}
     - npm i
-    - npm run build:docs *> "${CI_PROJECT_DIR}/docs_output.txt" || true
-    - gc ${CI_PROJECT_DIR}/docs_output.txt
-    - if ((cat ${CI_PROJECT_DIR}/docs_output.txt | Select-String "You have changed the public API signature for this project.").Count -gt 0) { exit 1 }
+    - npm run build:docs
   artifacts:
     name: 'TouchFree_Tooling_Documentation'
     paths:
