--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,64 +22,60 @@
     }
   },
   "plugins": ["@typescript-eslint", "spellcheck", "eslint-plugin-tsdoc"],
-  "ignorePatterns": ["/dist*", "/release", "build/*", "*_Example.html", "coverage/", "docs/*"],
+  "ignorePatterns": ["/dist*", "/release", "build/*", "*_Example.html", "coverage/"],
   "rules": {
     "indent": "off",
     "linebreak-style": "off",
     "quotes": ["error", "single", "avoid-escape"],
     "semi": ["error", "always"],
     "max-len": ["error", { "code": 120 }],
+    "tsdoc/syntax": "warn",
     "spellcheck/spell-checker": [
       1,
       {
         "lang": "en_GB",
         "skipWords": [
-          "touchfree",
-          "touchfreecursor",
-          "chiralities",
           "bitmask",
-          "umd",
-          "tsx",
-          "chirality",
-          "Ultraleap",
-          "enum",
-          "evt",
-          "plugin",
-          "plugins",
-          "pos",
-          "unregister",
-          "eod",
-          "dist",
-          "errored",
-          "svg",
-          "msg",
-          "guid",
-          "uuidgen",
-          "timeframe",
-          "func",
-          "deadzone",
-          "lerp",
-          "rect",
           "center",
-          "snapforce",
+          "cobertura",
+          "deadzone",
+          "dist",
+          "enum",
+          "eod",
+          "errored",
           "etc",
+          "evt",
+          "func",
+          "guid",
           "Impl",
           "Impls",
-          "ts",
           "jsDom",
-          "color",
-          "colors",
-          "colored",
+          "lerp",
           "mmps",
+          "msg",
           "nulled",
-          "vars",
-          "castedKey",
-          "touchstart",
-          "touchmove",
-          "touchend",
-          "cobertura"
+          "pos",
+          "rect",
+          "snapforce",
+          "svg",
+          "timeframe",
+          "ts",
+          "tsx",
+          "Ultraleap",
+          "umd",
+          "uuidgen",
+          "vars"
         ],
-        "skipWordIfMatch": ["^pointer.*$", "(\\S+(32|64)+)"],
+        "skipWordIfMatch": [
+          "^pointer.*$",
+          "(\\S+(32|64)+)",
+          "^touch.*$",
+          "^(p|P)lugin(s)?$",
+          "^(c|C)hiralit(y|ies)$",
+          "^(c|C)olor(s|ed)?$",
+          "^casted(Key)?$",
+          "(un|Un)?register(s)?"
+        ],
         "minLength": 3
       }
     ],
@@ -95,7 +91,36 @@
     "@typescript-eslint/no-empty-interface": "warn",
     "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-empty-function": "off",
-    "tsdoc/syntax": "warn"
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": ["typeLike"],
+        "format": ["PascalCase"]
+      },
+      {
+        "selector": ["variableLike", "method"],
+        "format": ["camelCase"]
+      },
+      {
+        "selector": ["variableLike"],
+        "modifiers": ["unused"],
+        "leadingUnderscore": "require",
+        "format": ["camelCase"]
+      },
+      {
+        "selector": ["variable"],
+        "format": ["camelCase", "UPPER_CASE"]
+      },
+      {
+        "selector": ["enumMember"],
+        "format": ["UPPER_CASE"]
+      },
+      {
+        "selector": "variable",
+        "modifiers": ["destructured"],
+        "format": null
+      }
+    ]
   },
   "globals": { "TouchFree": "readonly", "SnappingPlugin": "readonly" }
 }
