--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ TF_Tooling::Web::build:
     - win10
   script:
     # Get the TF Tooling for web version
-    - set -Name TF_TOOLING_API_VERSION -Value "$((Select-String -Path ".\src\TouchFreeToolingTypes.ts" "public static readonly ApiVersion. string = '(.*)';" | Select-Object * -First 1).Matches.Groups[1].Value)"
+    - set -Name TF_TOOLING_API_VERSION -Value "$((Select-String -Path ".\src\TouchFreeToolingTypes.ts" "public static readonly API_VERSION. string = '(.*)';" | Select-Object * -First 1).Matches.Groups[1].Value)"
     - set -Name TF_TFW_VERSION -Value "$((Select-String -Path ".\package.json" "  .version.. .(.*).," | Select-Object * -First 1).Matches.Groups[1].Value)"
 
     # Update Version.txt with latest information before packaging
