--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
+  # Requires manually keeping up to date with package.json
+  TF_TFW_VERSION: 1.4.0
 
 stages:
   - build
@@ -17,23 +19,14 @@ stages:
   when: always
   timeout: 10m
 
-.versions:
-  before_script:
-    # Get the TF Tooling for web version
-    - set -Name TF_TOOLING_API_VERSION -Value "$((Select-String -Path ".\src\TouchFreeToolingTypes.ts" "public static readonly API_VERSION. string = '(.*)';" | Select-Object * -First 1).Matches.Groups[1].Value)"
-    - set -Name TF_TFW_VERSION -Value "$((Select-String -Path ".\package.json" "  .version.. .(.*).," | Select-Object * -First 1).Matches.Groups[1].Value)"
-
 build::bundle:
-  extends: 
-    - .Always_Build
-    - .versions
+  extends: .Always_Build
   tags:
     - unity
     - win10
   script:
     # Get the TF Tooling for web version
     - set -Name TF_TOOLING_API_VERSION -Value "$((Select-String -Path ".\src\TouchFreeToolingTypes.ts" "public static readonly API_VERSION. string = '(.*)';" | Select-Object * -First 1).Matches.Groups[1].Value)"
-    - set -Name TF_TFW_VERSION -Value "$((Select-String -Path ".\package.json" "  .version.. .(.*).," | Select-Object * -First 1).Matches.Groups[1].Value)"
 
     # Update Version.txt with latest information before packaging
     - python ./Scripts/UpdateVersionFile.py --path ${CI_PROJECT_DIR}/Version.txt --swVer $TF_TFW_VERSION --apiVer $TF_TOOLING_API_VERSION --ref ${CI_COMMIT_SHORT_SHA} --branchName "$CI_COMMIT_REF_NAME"
@@ -147,7 +140,6 @@ package:
 #     - npm publish
 
 npm::pack:
-  extends: .versions
   stage: build
   tags:
     - docker-windows
