--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,7 +109,7 @@ pages:
   only:
     - develop
 
-package:
+package::bundle:
   stage: package
   image: alpine:3.13
   dependencies:
@@ -141,13 +141,13 @@ npm::publish:
     - npm publish
 
 npm::pack:
-  stage: build
+  stage: package
+  when: always
   tags:
     - docker-windows
   image: registry.ultrahaptics.com/ooh/infrastructure/windows-touchfree-toolchain:latest
-  when: always
-  # only:
-  #   - release
+  only:
+    - release
   script:
     - npm pack
   artifacts:
