--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,8 +135,8 @@ npm::publish:
   tags:
     - docker-windows
   image: registry.ultrahaptics.com/ooh/infrastructure/windows-touchfree-toolchain:latest
-  # only:
-  #   - release
+  only:
+    - release
   script:
     - npm config -L project set //registry.npmjs.org/:username=ul-touchfree
     - npm config -L project set //registry.npmjs.org/:_authToken=$NPM_TOKEN
