Bundle internal module in namespace, ignore unwanted warning in api-report and run with warnings as errors

--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -372,6 +372,9 @@
          * DEFAULT VALUE: false
          */
         // "addToApiReportFile": false
+      },
+      "TS2411": {
+        "logLevel": "none"
       }
 
       // "TS2551": {
