--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "leapmotion",
     "hand tracking"
   ],
+  "type": "module",
   "main": "build/src/index.js",
   "typings": "build/src/index.d.ts",
   "scripts": {
-    "jest": "jest",
-    "test": "jest --ci --reporters=default --reporters=jest-junit",
-    "test:coverage": "jest --ci --coverage",
-    "test:watch": "jest --watch",
+    "test": "vitest run",
+    "test:update-snapshots": "vitest run -u",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "build:api-report": "npm run build:tsc && api-extractor run --local --verbose -c api-extractor.jsonc",
     "build:docs": "npm run build:api-report && api-documenter markdown -i docs -o docs/markdown",
     "build:tsc": "tsc",
@@ -37,27 +38,23 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.22.33",
-    "@microsoft/api-extractor": "^7.36.4",
+    "@microsoft/api-documenter": "^7.23.1",
+    "@microsoft/api-extractor": "^7.37.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.12",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "@vitest/coverage-v8": "^0.34.4",
     "concurrently": "^7.6.0",
     "eslint": "^7.17.0",
     "eslint-plugin-spellcheck": "^0.0.19",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.3.1",
-    "jest-extended-snapshot": "^1.1.5",
-    "jest-junit": "^14.0.1",
     "prettier": "^2.8.2",
-    "ts-jest": "^29.0.4",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.9.3",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
