--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^7.17.0",
     "eslint-plugin-spellcheck": "^0.0.19",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "jsdom": "^22.1.0",
     "prettier": "^2.8.2",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
