--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* Basic Options */
     // "incremental": true,                   /* Enable incremental compilation */
     "target": "es6",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
-    "module": "ES2020",                       /* Specify module code generation: 'commonjs', 'es2015', 'es2020', 'es2022' or 'ESNext'. */
+    "module": "ES2015",                       /* Specify module code generation: 'commonjs', 'es2015', 'es2020', 'es2022' or 'ESNext'. */
     "lib": ["ES2017", "DOM", "DOM.Iterable"], /* Specify library files to be included in the compilation. */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
@@ -44,12 +44,12 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
-    "moduleResolution": "Bundler",            /* Specify module resolution strategy: 'node16' or 'bundler'. */
+    "moduleResolution": "bundler",            /* Specify module resolution strategy: 'node16' or 'bundler'. */
     "baseUrl": "./src",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
-    "types": ["vitest/globals"],                           /* Type declaration files to be included in compilation. */
+    "types": ["vitest/globals"],              /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": false,    /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": false,                 /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
