--- a/TF_Tooling_Web/package.json
+++ b/TF_Tooling_Web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "touchfree",
-  "version": "1.4.0",
+  "version": "1.4.1-beta",
   "description": "",
   "main": "index.js",
   "typings": "index.d.ts",
